tests/paczka2/big_fuzzy/71254423.err
Error in line 17: rXpZEqeeH7b A504 40,07
Error in line 16: lj9ZPG7 A818 53,3
Error in line 20: CUQg A818 56,8
Error in line 25: CUQg A233 38,7
Error in line 28: CUQg A768 18,0
Error in line 31: rXpZEqeeH7b A504 17,5
Error in line 34: A768 A818 36,1
Error in line 40: rXpZìqeeH7b A233 0,6
Error in line 35: CUQg A818 55,1
Error in line 36: rXpZEqeeH7b A233 3,4
Error in line 48: rXpZEqeeH7b A504 80,3
Error in line 55: CUQg A768 96,9
Error in line 60: CUQg A504 99,8
Error in line 65: CUQg A768 35,4
Error in line 69: lj9ZPG7 A768 11,17
Error in line 64: HY7U0v A818 83,9
Error in line 66: CUQg A818 74,0
Error in line 87: CAKT A768 -1,2
Error in line 84: HY7U0v A504 87,2
Error in line 91: HY7U0v A818 6,5
Error in line 81: A768 A818 39,1
Error in line 98: lj9ZPG7 A768 25,2
Error in line 83: CAKT A768 14,0
Error in line 97: HY7U0v A818 86,8
Error in line 93: rXpZEqeeH7b A233 241,1
Error in line 102: HY7U0v A768 39,6
Error in line 117: Czriy1Y4k A768 51,20
Error in line 119: lj9ZPG7 A818 -2,5
Error in line 116: A768 A768 91,0
Error in line 125: A768 A768 96,2
Error in line 128: A768 A233 48,7
Error in line 140: A768 A504 54,13
Error in line 137: Czriy1Y4k A504 49,0
Error in line 136: A768 A768 63,8
Error in line 135: lj9ZPG7 A818 90,2
Error in line 152: CUQg A818 6,8
Error in line 146: CAKT A768 73,4
Error in line 147: rXpZEqeeH7b A233 0,0
Error in line 176: rXpZEqeeH7b A768 -5,5
Error in line 145: A768 A504 179,7
Error in line 177: A768 A233 43,5
Error in line 171: CUQg A233 78,4
Error in line 199: CUQg A768 616,0
Error in line 203: lj9ZPG7 A504 54,8
Error in line 202: CUQg A818 22,2
Error in line 208: HY7U0v A233 55,8
Error in line 210: A768 A504 77,1
Error in line 218: HY7U0v A233 24,1
Error in line 226: A768 A768 11,6
Error in line 230: lj9ZPG7 A504 47,5
Error in line 246: A768 A504 78,5
